Add Token authentication

--- a/it_profi/main/templates/main/orders.html
+++ b/it_profi/main/templates/main/orders.html
@@ -15,7 +15,7 @@
             {% with el=el num=orders.start_index|add:forloop.counter0 %}
                 <div style="width:700px; text-align:center;" class="alert alert-warning">
                     <h3>{{num}}. {{ el.client }}</h3>
-                    <p>{{ el.text }}</p>
+                    <p>{{ el.problem }}</p>
                     <p>{{ el.date }}</p>
                 </div>
             {% endwith %}
